# ai-interview-coach

./: .env.example  .gitignore  README.md  pyproject.toml
src/interview_analyzer/: __init__.py  analyzer.py  cli.py  config.py  models.py  report.py  resume_parser.py  transcriber.py
src/interview_analyzer/prompts/: communication_analysis.py  content_analysis.py  interaction_analysis.py  overall_assessment.py  question_extraction.py
src/interview_analyzer/web/: app.py  database.py  dependencies.py  schemas.py
src/interview_analyzer/web/prompts/: interviewer_system.py  interviewer_utils.py
src/interview_analyzer/web/routers/: audio.py  interviews.py  pages.py  ws.py
src/interview_analyzer/web/services/: analysis_bridge.py  interviewer.py  session_manager.py  whisper_service.py
src/interview_analyzer/web/static/css/: styles.css
src/interview_analyzer/web/static/js/: app.js  audio.js  chat.js  timer.js
src/interview_analyzer/web/templates/: base.html  dashboard.html  index.html  interview.html  report.html
templates/: report.md.j2
