[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-analyzer"
version = "0.1.0"
description = "CLI tool that analyzes technical interview recordings and generates feedback reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.10.0",
    "Jinja2>=3.1.0",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
interview-analyzer = "interview_analyzer.cli:app"
interview-simulator = "interview_analyzer.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]
